--- a/variants/Cargo.toml
+++ b/variants/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "aws-k8s-1.24",
     "aws-k8s-1.24-nvidia",
     "metal-dev",
+    "metal-rpi-dev",
     "metal-k8s-1.21",
     "metal-k8s-1.22",
     "metal-k8s-1.23",
