--- a/sources/deny.toml
+++ b/sources/deny.toml
@@ -70,7 +70,10 @@ skip-tree = [
     # are using different versions of windows-sys. we skip the
     # dependency tree because windows-sys has many sub-crates
     # that differ in major version.
-    { name = "windows-sys", version = "=0.36.1" }
+    { name = "windows-sys", version = "=0.36.1" },
+    # gptman is locked to older nix but is fine to move up
+    # https://github.com/rust-disk-partition-management/gptman/pull/113
+    { name = "nix", version = "0.24.3" }
 ]
 
 [sources]
