--- a/variants/aws-dev/Cargo.toml
+++ b/variants/aws-dev/Cargo.toml
@@ -9,6 +9,7 @@ exclude = ["README.md"]
 
 [package.metadata.build-variant.image-features]
 grub-set-private-var = true
+systemd-networkd = true
 
 [package.metadata.build-variant]
 kernel-parameters = [
@@ -19,6 +20,7 @@ kernel-parameters = [
     "net.ifnames=0",
     "netdog.default-interface=eth0:dhcp4,dhcp6?",
     "quiet",
+    "systemd.log_level=debug"
 ]
 included-packages = [
 # core
